# pastepassword

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  credentials.rs  import_export.rs  mod.rs  tags.rs
src-tauri/src/crypto/: kdf.rs  mod.rs  vault.rs
src-tauri/src/db/: migrations.rs  models.rs
src-tauri/src/detection/: credential_type.rs  mod.rs
src/components/auth/: SetupScreen.tsx  UnlockScreen.tsx
src/components/credentials/: CredentialDetail.tsx  CredentialList.tsx  EditCredentialModal.tsx  QuickAddModal.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/search/: SearchPalette.tsx
src/components/settings/: SettingsPanel.tsx
src/components/ui/: CustomSelect.tsx
src/lib/: styles.ts  tauri.ts  utils.ts
src/stores/: authStore.ts  credentialStore.ts
src/styles/: globals.css
src/types/: index.ts
